test/errors/let_forward1.rcasm
entry: {
    ldi a,state_length

!let state_length = state_end - state
!align 16
state:
    !byte 0, 1, 2, 3
state_end:
}